Fix bug with background not fitting to mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -141,6 +141,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-size: cover;
 
   .welcome-container {
     margin: 120px 24px;
